--- a/index.html
+++ b/index.html
@@ -11,9 +11,33 @@
     <h1>Finn Baldwin</h1>
     <p>Welcome to my portfolio! I'm a Java developer from New Hampshire.</p>
   </header>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="resume.html">Resume</a></li>
+    <li><a href="about.html">About Me</a></li>
+  </ul>
+</nav>
 
+  <!-- Navigation Menu -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="about.html">About Me</a></li>
+    </ul>
+  </nav>
+
+  <!-- Profile Picture -->
+  <section style="text-align: center; margin-top: 20px;">
+    <img src="images/profile.jpg" alt="Finn Baldwin" width="180" style="border-radius: 50%;" />
+  </section>
+
+  <!-- Projects Section -->
   <section>
-    <h2>Java Projects</h2>
+    <h2>Featured Java Projects</h2>
     <ul>
       <li><a href="projects/MedicalClinicProject.zip" download>Medical Clinic Project</a></li>
       <li><a href="projects/CountriesMonitor_LinkedList.zip" download>Country Monitor (Linked List)</a></li>
