--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
     <h1>Finn Baldwin</h1>
     <p>Welcome to my portfolio! I'm a Java developer from New Hampshire.</p>
   </header>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="about.html">About Me</a></li>
-  </ul>
-</nav>
 
   <!-- Navigation Menu -->
   <nav>
@@ -31,7 +23,7 @@
   </nav>
 
   <!-- Profile Picture -->
-  <section style="text-align: center; margin-top: 20px;">
+  <section style="text-align: center; margin: 20px 0;">
     <img src="images/profile.jpg" alt="Finn Baldwin" width="180" style="border-radius: 50%;" />
   </section>
 
