--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   <section>
     <h2>Featured Java Projects</h2>
     <ul>
-      <li><a href="projects/MedicalClinicProject.zip" download>Medical Clinic Project</a></li>
-      <li><a href="projects/CountriesMonitor_LinkedList.zip" download>Country Monitor (Linked List)</a></li>
+      <li><a href="projects/AuthSystem.10.zip" download>AuthSystem.10</a></li>
+      <li><a href="projects/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
+      <li><a href="projects/Student-generator.zip" download>Student-generator</a></li>
     </ul>
   </section>
 
