--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <section>
     <h2>Featured Java Projects</h2>
     <ul>
-      <li><a href="Projects/AuthSystem.10.zip" download>AuthSystem.10</a></li>
-      <li><a href="Projects/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
-      <li><a href="Projects/Student-generator.zip" download>Student-generator</a></li>
+      <li><a href="Projects.zip/AuthSystem.10.zip" download>AuthSystem.10</a></li>
+      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
+      <li><a href="Projects.zip/Student-generator.zip" download>Student-generator</a></li>
     </ul>
   </section>
 
@@ -37,5 +37,6 @@
   </footer>
 </body>
 </html>
+
 
 
