--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="Projects.zip">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -37,6 +37,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
