--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
     </ul>
   </nav>
 
-  <!-- Projects Section -->
+  <!-- Home Content Section -->
   <section>
-    <h2>Featured Java Projects</h2>
-    <ul>
-      <li><a href="Projects.zip/AuthSystem.10.zip" download>AuthSystem.10</a></li>
-      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
-      <li><a href="Projects.zip/Student-generator.zip" download>Student-generator</a></li>
-    </ul>
+    <p>
+      I am a proud graduate of Keene State College, holding both a Bachelor of Arts in Criminal Justice and a Bachelor of Science in Computer Science. My background combines a strong understanding of legal systems with technical expertise, particularly in computer networking and security. I have hands-on experience with UDP and TCP protocols, as well as a proven track record in tutoring peers in complex subjects, demonstrating both communication and leadership skills. I am eager to apply my diverse knowledge and practical skills in a real-world environment, contributing to a company’s success by helping its team grow, innovate, and achieve their goals.
+    </p>
+
+    <p>
+      <strong>Connect with me on LinkedIn:</strong><br />
+      <a href="https://www.linkedin.com/in/finn-baldwin-416a1a268" target="_blank">
+        linkedin.com/in/finn-baldwin-416a1a268
+      </a>
+    </p>
   </section>
 
   <footer>
     <p>© 2025 Finn Baldwin</p>
+    <p><em>In a connected world, protecting data is protecting people — and that’s the mission I’ve trained for.</em></p>
   </footer>
 </body>
 </html>
-
-
-
-
