--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Finn Baldwin</h1>
-    <p>Welcome to my portfolio! I'm a Java developer from New Hampshire.</p>
+    <p>Welcome to my portfolio! I'm an IT professional from New Hampshire.</p>
   </header>
 
   <!-- Navigation Menu -->
@@ -42,3 +42,4 @@
   </footer>
 </body>
 </html>
+
