--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -36,10 +36,19 @@
     </p>
   </section>
 
+  <!-- Projects Section -->
+  <section>
+    <h2>Featured Java Projects</h2>
+    <ul>
+      <li><a href="Projects.zip/AuthSystem.10.zip" download>AuthSystem.10</a></li>
+      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
+      <li><a href="Projects.zip/Student-generator.zip" download>Student-generator</a></li>
+    </ul>
+  </section>
+
   <footer>
     <p>© 2025 Finn Baldwin</p>
     <p><em>In a connected world, protecting data is protecting people — and that’s the mission I’ve trained for.</em></p>
   </footer>
 </body>
 </html>
-
