--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="Projects.zip">Projects</a></li>
+      <li><a href="#projects">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -37,12 +37,12 @@
   </section>
 
   <!-- Projects Section -->
-  <section>
+  <section id="projects">
     <h2>Featured Java Projects</h2>
     <ul>
-      <li><a href="Projects.zip/AuthSystem.10.zip" download>AuthSystem.10</a></li>
-      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
-      <li><a href="Projects.zip/Student-generator.zip" download>Student-generator</a></li>
+      <li><a href="projects/AuthSystem.10.zip" download>AuthSystem.10</a></li>
+      <li><a href="projects/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
+      <li><a href="projects/Student-generator.zip" download>Student-generator</a></li>
     </ul>
   </section>
 
