--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -34,16 +34,6 @@
         linkedin.com/in/finn-baldwin-416a1a268
       </a>
     </p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Featured Java Projects</h2>
-    <ul>
-      <li><a href="projects/AuthSystem.10.zip" download>AuthSystem.10</a></li>
-      <li><a href="projects/DSAss5_BaldwinF.zip" download>DSAss5_BaldwinF</a></li>
-      <li><a href="projects/Student-generator.zip" download>Student-generator</a></li>
-    </ul>
   </section>
 
   <footer>
