--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="Projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -26,9 +26,9 @@
   <section>
     <h2>Featured Java Projects</h2>
     <ul>
-      <li><a href="projects/AuthSystem.10.zip" download>Download AuthSystem.10</a></li>
-      <li><a href="projects/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
-      <li><a href="projects/Student-generator.zip" download>Download Student-generator</a></li>
+      <li><a href="Projects.zip/AuthSystem.10.zip" download>Download AuthSystem.10</a></li>
+      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
+      <li><a href="Projects.zip/Student-generator.zip" download>Download Student-generator</a></li>
     </ul>
   </section>
 
@@ -37,4 +37,5 @@
     <p><em>In a connected world, protecting data is protecting people — and that’s the mission I’ve trained for.</em></p>
   </footer>
 </body>
+
 </html>
