--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="Projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -33,6 +33,11 @@
       <a href="https://www.linkedin.com/in/finn-baldwin-416a1a268" target="_blank">
         linkedin.com/in/finn-baldwin-416a1a268
       </a>
+    </p>
+
+    <p>
+      <strong>Interested in my work?</strong><br />
+      Visit the <a href="Projects.html">Projects</a> page to explore featured Java applications I've developed.
     </p>
   </section>
 
