--- a/Projects.html
+++ b/Projects.html
@@ -9,14 +9,14 @@
 <body>
   <header>
     <h1>Finn Baldwin</h1>
-    <p>Explore some of my featured Java projects below.</p>
+    <p>Explore my featured Java projects below.</p>
   </header>
 
   <!-- Navigation Menu -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="Projects">Projects</a></li>
+      <!-- Projects tab removed or included as you want -->
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -26,9 +26,7 @@
   <section>
     <h2>Featured Java Projects</h2>
     <ul>
-      <li><a href="Projects/AuthSystem.10.zip" download>Download AuthSystem.10</a></li>
-      <li><a href="Projects/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
-      <li><a href="Projects/Student-generator.zip" download>Download Student-generator</a></li>
+      <li><a href="Projects.zip" download>Download All Projects (Projects.zip)</a></li>
     </ul>
   </section>
 
@@ -37,8 +35,4 @@
     <p><em>In a connected world, protecting data is protecting people — and that’s the mission I’ve trained for.</em></p>
   </footer>
 </body>
-
 </html>
-
-
-
