--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
   <!-- Home Content Section -->
   <section>
+
+
+      <p>
+      Recent Achievements and Projects: I am currently working towards getting my Tech+ and Security+ Certificates, while also learning the fundamentals of webpage design! If you have any feedback or questions feel free to reach out.
+    </p>
+    
     <p>
       I am a proud graduate of Keene State College, holding both a Bachelor of Arts in Criminal Justice and a Bachelor of Science in Computer Science. My background combines a strong understanding of legal systems with technical expertise, particularly in computer networking and security. I have hands-on experience with UDP and TCP protocols, as well as a proven track record in tutoring peers in complex subjects, demonstrating both communication and leadership skills. I am eager to apply my diverse knowledge and practical skills in a real-world environment, contributing to a company’s success by helping its team grow, innovate, and achieve their goals.
     </p>
@@ -47,3 +53,4 @@
   </footer>
 </body>
 </html>
+
