--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
       <p>
-      Recent Achievements and Projects: I am currently working towards getting my Tech+ and Security+ Certificates, while also learning the fundamentals of webpage design! If you have any feedback or questions feel free to reach out.
+       <strong>Recent Achievements and Projects:</strong><br /> I am currently working towards getting my Tech+ and Security+ Certificates, while also learning the fundamentals of webpage design! If you have any feedback or questions feel free to reach out.
     </p>
     
     <p>
@@ -53,4 +53,5 @@
   </footer>
 </body>
 </html>
+
 
