--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
       <p>
-       <strong>Recent Achievements and Projects:</strong><br /> (8/5/2025) I am currently working towards getting my Tech+ and Security+ Certificates, while also learning the fundamentals of webpage design! If you have any feedback or questions feel free to reach out.
+       <strong>Recent Achievements and Projects:</strong><br /> (8/5/2025) I am currently working towards getting my Tech+ and Security+ Certificates, while also learning the fundamentals of webpage design!
     </p>
     
     <p>
@@ -57,6 +57,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
