--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,6 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <!-- Projects tab removed or included as you want -->
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
@@ -27,6 +26,9 @@
     <h2>Featured Java Projects</h2>
     <ul>
       <li><a href="Projects.zip" download>Download All Projects (Projects.zip)</a></li>
+      <li><a href="Projects/AuthSystem1.0.zip" download>Download AuthSystem1.0</a></li>
+      <li><a href="Projects/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
+      <li><a href="Projects/Student-generator.zip" download>Download Student-generator</a></li>
     </ul>
   </section>
 
