--- a/Projects.html
+++ b/Projects.html
@@ -26,9 +26,9 @@
     <h2>Featured Java Projects</h2>
     <ul>
       <li><a href="Projects.zip" download>Download All Projects (Projects.zip)</a></li>
-      <li><a href="Projects/AuthSystem1.0.zip" download>Download AuthSystem1.0</a></li>
-      <li><a href="Projects/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
-      <li><a href="Projects/Student-generator.zip" download>Download Student-generator</a></li>
+      <li><a href="Projects.zip/AuthSystem1.0.zip" download>Download AuthSystem1.0</a></li>
+      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
+      <li><a href="Projects.zip/Student-generator.zip" download>Download Student-generator</a></li>
     </ul>
   </section>
 
@@ -38,3 +38,4 @@
   </footer>
 </body>
 </html>
+
