--- a/Projects.html
+++ b/Projects.html
@@ -26,7 +26,7 @@
     <h2>Featured Java Projects</h2>
     <ul>
       <li><a href="Projects.zip" download>Download All Projects (Projects.zip)</a></li>
-      <li><a href="AuthSystem1.0.zip" download>Download AuthSystem1.0</a></li>
+      <li><a href="AuthSystem1.0.zip" download>Download this Authentication Project</a></li>
       <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
       <li><a href="Projects.zip/Student-generator.zip" download>Download Student-generator</a></li>
     </ul>
@@ -38,5 +38,6 @@
   </footer>
 </body>
 </html>
+
 
 
