--- a/Projects.html
+++ b/Projects.html
@@ -27,7 +27,7 @@
     <ul>
       <li><a href="Projects.zip" download>Download All Projects (Projects.zip)</a></li>
       <li><a href="AuthSystem1.0.zip" download>Download my Authentication Project</a></li>
-      <li><a href="Projects.zip/DSAss5_BaldwinF.zip" download>Download DSAss5_BaldwinF</a></li>
+      <li><a href="School-log.zip" download>Download my School Log for Students, Faculty, and Alumni</a></li>
       <li><a href="Projects.zip/Student-generator.zip" download>Download Student-generator</a></li>
     </ul>
   </section>
@@ -38,6 +38,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
