--- a/Projects.html
+++ b/Projects.html
@@ -18,6 +18,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
+      <li><a href="about.html">Volunteer Work</a></li>
     </ul>
   </nav>
 
@@ -38,6 +39,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
