--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
+      <li><a href="about.html">Volunteer Work</a></li>
     </ul>
   </nav>
 
@@ -61,3 +62,4 @@
 </body>
 
 </html>
+
