--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <!-- Projects tab removed -->
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
+      <li><a href="about.html">Volunteer Work</a></li>
     </ul>
   </nav>
 
@@ -57,6 +58,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
