--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="about.html">About Me</a></li>
-      <li><a href="about.html">Volunteer Work</a></li>
+      <li><a href="Volunteer.html">Volunteer Work</a></li>
     </ul>
   </nav>
 
@@ -101,5 +101,6 @@
   </footer>
 </body>
 </html>
+
 
 
