--- a/Volunteer.html
+++ b/Volunteer.html
@@ -31,7 +31,7 @@
   <section>
     <h2>Volunteer Experience</h2>
 
-    <p><strong>June 2021 – Present | Gilmanton Historical Museum</strong></p>
+    <p><strong>June 2021 – May 2024 | Gilmanton Historical Museum</strong></p>
     <p>
       I began volunteering with the Gilmanton Historical Museum in June 2021 and have continued to serve since then. My responsibilities have included carefully moving and storing historical artifacts, logging and cataloging items for archival purposes, cleaning and preserving delicate materials, and providing general assistance to the museum staff as needed. This role has strengthened my appreciation for local history and community heritage.
     </p>
@@ -59,3 +59,4 @@
 </body>
 
 </html>
+
