--- a/Volunteer.html
+++ b/Volunteer.html
@@ -31,12 +31,12 @@
   <section>
     <h2>Volunteer Experience</h2>
 
-    <p><strong>June 2021 – May 2024 | Gilmanton Historical Museum</strong></p>
+    <p><strong>June 2021 – Present | Gilmanton Historical Museum</strong></p>
     <p>
       I began volunteering with the Gilmanton Historical Museum in June 2021 and have continued to serve since then. My responsibilities have included carefully moving and storing historical artifacts, logging and cataloging items for archival purposes, cleaning and preserving delicate materials, and providing general assistance to the museum staff as needed. This role has strengthened my appreciation for local history and community heritage.
     </p>
 
-    <p><strong>September 2022 – Present | St. Jude Fundraising through Tau Kappa Epsilon</strong></p>
+    <p><strong>September 2022 – May 2024 | St. Jude Fundraising through Tau Kappa Epsilon</strong></p>
     <p>
       As a member of Tau Kappa Epsilon, I have been actively involved in fundraising efforts for St. Jude Children’s Research Hospital since September 2022. Our initiatives have included campus-wide events such as pie-in-the-face contests, dunk tanks, and a haunted house open to the public. Through our creativity and dedication, we successfully raised over $10,000 for St. Jude, supporting vital research and treatment for children battling serious illnesses.
     </p>
@@ -46,7 +46,7 @@
       During the fall of 2022, I participated in a weekly community service program through Tau Kappa Epsilon, where we offered assistance to local homeowners. Our efforts included mowing lawns, raking leaves, painting, and helping with various household maintenance tasks. This experience helped build connections within the local community and instilled a strong sense of responsibility and teamwork.
     </p>
 
-    <p><strong>October 2023 | Flax Day – Gilmanton, NH</strong></p>
+    <p><strong>August 2023 - Present | Flax Day – Gilmanton, NH</strong></p>
     <p>
       I volunteered at Flax Day, a community event in Gilmanton, NH that reenacts the historical process of turning flax into linen as it would have been done over 200 years ago. My role involved setting up the event, assisting with parking and guest coordination, teaching visitors about the flax-to-cloth process, and supporting other event logistics. It was a unique opportunity to contribute to public education and engage with local heritage.
     </p>
@@ -59,4 +59,5 @@
 </body>
 
 </html>
+
 
