--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </p>
     
     <p>
-     (5/10/2025) I am excited to annouce that I graduated from Keene State College in May of 2024 with my Bachelor of Arts in Criminal Justice. I will recieve my Bachelor of Science in Computer Science in December of 2025!
+     (5/10/2025) I am excited to annouce that I graduated from Keene State College in May of 2024 with my Bachelor of Arts in Criminal Justice. I will receive my Bachelor of Science in Computer Science in December of 2025!
     </p>
     
     <p>
@@ -58,6 +58,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
