--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
       <p>
-       <strong>Recent Achievements and Projects:</strong><br /> (8/5/2025) I am currently working towards getting my Tech+ and Security+ Certificates, while also learning the fundamentals of webpage design!
+       <strong>Recent Achievements and Projects:</strong><br /> (8/5/2025) I am currently working towards getting my Network+ and Security+ Certificates, while also learning the fundamentals of webpage design!
     </p>
     
     <p>
@@ -58,6 +58,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
