--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@
 
     <h2>Certifications</h2>
     <ul>
-      <li>Tech+ Certificate (Expected by September 2025)</li>
+      <li>Network+ Certificate (Expected by September 2025)</li>
     </ul>
 
     <h2>Languages</h2>
@@ -101,6 +101,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
